z-index bug

--- a/mobilenav.css
+++ b/mobilenav.css
@@ -12,7 +12,7 @@
       font-size: 1.5rem;
       font-weight: 400;
       position: fixed;
-      z-index: 999;
+      z-index: 1;
   }
     #menu li a {
       text-decoration: none;
